--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,9 +1,9 @@
 services:
   redis:
-    image: redis:7.4.1
+    image: redis:7.4.2
     restart: always
-    command: ["redis-server", "--appendonly", "yes", "--maxmemory", "12000mb", "--maxmemory-policy", "volatile-lru"]
-    #command: ["redis-server", "--appendonly", "yes", "--appendfsync", "always", "--maxmemory", "32000mb", "--maxmemory-policy", "allkeys-lru"]
+    #command: ["redis-server", "--appendonly", "yes", "--maxmemory", "12000mb", "--maxmemory-policy", "volatile-lru"]
+    command: ["redis-server", "--appendonly", "yes", "--appendfsync", "always", "--maxmemory", "20000mb", "--maxmemory-policy", "allkeys-lru"]
     #command:
     #- bash
     #- -c
@@ -22,7 +22,7 @@ services:
     volumes:
       - redisdata:/data
   elasticsearch:
-    image: docker.elastic.co/elasticsearch/elasticsearch:8.17.0
+    image: docker.elastic.co/elasticsearch/elasticsearch:8.17.3
     volumes:
       - esdata:/usr/share/elasticsearch/data
     environment:
@@ -63,9 +63,11 @@ services:
       - RABBITMQ_NODENAME=rabbit01@localhost
     volumes:
       - amqpdata:/var/lib/rabbitmq
+    ports:
+      - "0.0.0.0:15672:15672"
     restart: always
   opencti:
-    image: opencti/platform:6.4.8
+    image: opencti/platform:6.5.7
     environment:
       - NODE_OPTIONS=--max-old-space-size=8096
       - APP__PORT=8080
@@ -107,7 +109,7 @@ services:
       - rabbitmq
     restart: always
   worker:
-    image: opencti/worker:6.4.8
+    image: opencti/worker:6.5.7
     environment:
       - OPENCTI_URL=http://opencti:8080
       - OPENCTI_TOKEN=${OPENCTI_ADMIN_TOKEN}
@@ -119,7 +121,7 @@ services:
       replicas: 3
     restart: always
   connector-export-report-pdf:
-    image: opencti/connector-export-report-pdf:6.4.8
+    image: opencti/connector-export-report-pdf:6.5.7
     environment:
       - OPENCTI_URL=http://opencti:8080
       - OPENCTI_TOKEN=${OPENCTI_ADMIN_TOKEN}
@@ -143,7 +145,7 @@ services:
     depends_on:
       - opencti
   connector-export-file-stix:
-    image: opencti/connector-export-file-stix:6.4.8
+    image: opencti/connector-export-file-stix:6.5.7
     environment:
       - OPENCTI_URL=http://opencti:8080
       - OPENCTI_TOKEN=${OPENCTI_ADMIN_TOKEN}
@@ -158,7 +160,7 @@ services:
     depends_on:
       - opencti
   connector-export-file-csv:
-    image: opencti/connector-export-file-csv:6.4.8
+    image: opencti/connector-export-file-csv:6.5.7
     environment:
       - OPENCTI_URL=http://opencti:8080
       - OPENCTI_TOKEN=${OPENCTI_ADMIN_TOKEN}
@@ -171,7 +173,7 @@ services:
     depends_on:
       - opencti
   connector-export-file-txt:
-    image: opencti/connector-export-file-txt:6.4.8
+    image: opencti/connector-export-file-txt:6.5.7
     environment:
       - OPENCTI_URL=http://opencti:8080
       - OPENCTI_TOKEN=${OPENCTI_ADMIN_TOKEN}
@@ -184,7 +186,7 @@ services:
     depends_on:
       - opencti
   connector-import-file-stix:
-    image: opencti/connector-import-file-stix:6.4.8
+    image: opencti/connector-import-file-stix:6.5.7
     environment:
       - OPENCTI_URL=http://opencti:8080
       - OPENCTI_TOKEN=${OPENCTI_ADMIN_TOKEN}
@@ -199,7 +201,7 @@ services:
     depends_on:
       - opencti
   connector-import-document:
-    image: opencti/connector-import-document:6.4.8
+    image: opencti/connector-import-document:6.5.7
     environment:
       - OPENCTI_URL=http://opencti:8080
       - OPENCTI_TOKEN=${OPENCTI_ADMIN_TOKEN}
@@ -217,7 +219,7 @@ services:
     depends_on:
       - opencti
   connector-analysis:
-    image: opencti/connector-import-document:6.4.8
+    image: opencti/connector-import-document:6.5.7
     environment:
       - OPENCTI_URL=http://opencti:8080
       - OPENCTI_TOKEN=${OPENCTI_ADMIN_TOKEN}
@@ -234,7 +236,7 @@ services:
     depends_on:
       - opencti
   connector-opencti:
-    image: opencti/connector-opencti:6.4.8
+    image: opencti/connector-opencti:6.5.7
     environment:
       - OPENCTI_URL=http://opencti:8080
       - OPENCTI_TOKEN=${OPENCTI_ADMIN_TOKEN}
@@ -254,7 +256,7 @@ services:
     depends_on:
       - opencti
   connector-alienvault:
-    image: opencti/connector-alienvault:6.4.8
+    image: opencti/connector-alienvault:6.5.7
     environment:
       - OPENCTI_URL=http://opencti:8080
       - OPENCTI_TOKEN=${OPENCTI_ADMIN_TOKEN}
@@ -291,7 +293,7 @@ services:
     depends_on:
       - opencti
 #  connector-cisa-known-exploited-vulnerabilities:
-#    image: opencti/connector-cisa-known-exploited-vulnerabilities:6.4.8
+#    image: opencti/connector-cisa-known-exploited-vulnerabilities:6.5.7
 #    environment:
 #      - OPENCTI_URL=http://opencti:8080
 #      - OPENCTI_TOKEN=${OPENCTI_ADMIN_TOKEN}
@@ -308,7 +310,7 @@ services:
 #    depends_on:
 #      - opencti
   connector-abuseipdb-ipblacklist:
-    image: opencti/connector-abuseipdb-ipblacklist:6.4.8
+    image: opencti/connector-abuseipdb-ipblacklist:6.5.7
     environment:
       - OPENCTI_URL=http://opencti:8080
       - OPENCTI_TOKEN=${OPENCTI_ADMIN_TOKEN}
@@ -319,13 +321,13 @@ services:
       - ABUSEIPDB_URL=https://api.abuseipdb.com/api/v2/blacklist
       - ABUSEIPDB_API_KEY=APIKEYHERE
       - ABUSEIPDB_SCORE=100
-      - ABUSEIPDB_LIMIT=5000
+      - ABUSEIPDB_LIMIT=10000
       - ABUSEIPDB_INTERVAL=3 #Day
     restart: always
     depends_on:
       - opencti
   connector-vxvault:
-    image: opencti/connector-vxvault:6.4.8
+    image: opencti/connector-vxvault:6.5.7
     environment:
       - OPENCTI_URL=http://opencti:8080
       - OPENCTI_TOKEN=${OPENCTI_ADMIN_TOKEN}
@@ -341,7 +343,7 @@ services:
     depends_on:
       - opencti
   connector-shodan:
-    image: opencti/connector-shodan:6.4.8
+    image: opencti/connector-shodan:6.5.7
     environment:
       - OPENCTI_URL=http://opencti:8080
       - OPENCTI_TOKEN=${OPENCTI_ADMIN_TOKEN}
@@ -360,7 +362,7 @@ services:
     depends_on:
       - opencti
   connector-abuse-ssl:
-    image: opencti/connector-abuse-ssl:6.4.8
+    image: opencti/connector-abuse-ssl:6.5.7
     environment:
       - OPENCTI_URL=http://opencti:8080
       - OPENCTI_TOKEN=${OPENCTI_ADMIN_TOKEN}
@@ -374,7 +376,7 @@ services:
     depends_on:
       - opencti
   connector-ipinfo:
-    image: opencti/connector-ipinfo:6.4.8
+    image: opencti/connector-ipinfo:6.5.7
     environment:
       - OPENCTI_URL=http://opencti:8080
       - OPENCTI_TOKEN=${OPENCTI_ADMIN_TOKEN}
@@ -391,7 +393,7 @@ services:
     depends_on:
       - opencti
   connector-aptcampaign:
-    image: opencti/connector-cyber-campaign-collection:6.4.8
+    image: opencti/connector-cyber-campaign-collection:6.5.7
     environment:
       - OPENCTI_URL=http://opencti:8080
       - OPENCTI_TOKEN=${OPENCTI_ADMIN_TOKEN}
@@ -407,7 +409,7 @@ services:
     depends_on:
       - opencti
   connector-malware-bazaar-recent-additions:
-    image: opencti/connector-malwarebazaar-recent-additions:6.4.8
+    image: opencti/connector-malwarebazaar-recent-additions:6.5.7
     environment:
       - OPENCTI_URL=http://opencti:8080
       - OPENCTI_TOKEN=${OPENCTI_ADMIN_TOKEN}
@@ -424,7 +426,7 @@ services:
     depends_on:
       - opencti
   connector-mitre:
-    image: opencti/connector-mitre:6.4.8
+    image: opencti/connector-mitre:6.5.7
     environment:
       - OPENCTI_URL=http://opencti:8080
       - OPENCTI_TOKEN=${OPENCTI_ADMIN_TOKEN}
@@ -439,7 +441,7 @@ services:
     depends_on:
       - opencti
   connector-mitre-atlas:
-    image: opencti/connector-mitre-atlas:6.4.8
+    image: opencti/connector-mitre-atlas:6.5.7
     environment:
       - OPENCTI_URL=http://opencti:8080
       - OPENCTI_TOKEN=${OPENCTI_ADMIN_TOKEN}
@@ -455,7 +457,7 @@ services:
     depends_on:
       - opencti
   connector-dnstwist:
-    image: opencti/connector-dnstwist:6.4.8
+    image: opencti/connector-dnstwist:6.5.7
     environment:
       - CONNECTOR_NAME=DNS_TWISTER
       - CONNECTOR_SCOPE=Domain-Name
@@ -474,7 +476,7 @@ services:
     depends_on:
       - opencti
   connector-disarm-framework:
-    image: opencti/connector-disarm-framework:6.4.8
+    image: opencti/connector-disarm-framework:6.5.7
     environment:
       - OPENCTI_URL=http://opencti:8080
       - OPENCTI_TOKEN=${OPENCTI_ADMIN_TOKEN}
@@ -489,7 +491,7 @@ services:
     depends_on:
       - opencti
   connector-cve:
-    image: opencti/connector-cve:6.4.8
+    image: opencti/connector-cve:6.5.7
     environment:
       - OPENCTI_URL=http://opencti:8080
       - OPENCTI_TOKEN=${OPENCTI_ADMIN_TOKEN}
@@ -509,7 +511,7 @@ services:
     depends_on:
       - opencti
   connector-cpe:
-    image: opencti/connector-cpe:6.4.8
+    image: opencti/connector-cpe:6.5.7
     environment:
       - OPENCTI_URL=http://opencti:8080
       - OPENCTI_TOKEN=${OPENCTI_ADMIN_TOKEN}
@@ -525,7 +527,7 @@ services:
     depends_on:
       - opencti
 #  connector-urlhaus:
-#    image: opencti/connector-urlhaus:6.4.8
+#    image: opencti/connector-urlhaus:6.5.7
 #    environment:
 #      - OPENCTI_URL=http://opencti:8080
 #      - OPENCTI_TOKEN=${OPENCTI_ADMIN_TOKEN}
@@ -543,7 +545,7 @@ services:
 #    depends_on:
 #      - opencti
 #  connector-google-safebrowsing:
-#    image: opencti/connector-google-safebrowsing:6.4.8
+#    image: opencti/connector-google-safebrowsing:6.5.7
 #    environment:
 #      # Connector's definition parameters:
 #      - CONNECTOR_NAME=Google Safe Browsing
@@ -562,7 +564,7 @@ services:
 #    depends_on:
 #      - opencti
 #  connector-ipqs:
-#    image: opencti/connector-ipqs:6.4.8
+#    image: opencti/connector-ipqs:6.5.7
 #    environment:
 #      - OPENCTI_URL=http://opencti:8080
 #      - OPENCTI_TOKEN=${OPENCTI_ADMIN_TOKEN}
@@ -582,7 +584,7 @@ services:
 #    depends_on:
 #      - opencti
 #  connector-greynoise:
-#    image: opencti/connector-greynoise:6.4.8
+#    image: opencti/connector-greynoise:6.5.7
 #    environment:
 #      - OPENCTI_URL=http://opencti:8080
 #      - OPENCTI_TOKEN=${OPENCTI_ADMIN_TOKEN}
@@ -601,7 +603,7 @@ services:
 #    depends_on:
 #      - opencti
 #  connector-maltiverse:
-#    image: opencti/connector-maltiverse:6.4.8
+#    image: opencti/connector-maltiverse:6.5.7
 #    environment:
 #      - OPENCTI_URL=http://opencti:8080
 #      - OPENCTI_TOKEN=${OPENCTI_ADMIN_TOKEN}
