--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,9 +1,9 @@
 services:
   redis:
-    image: redis:7.4.2
+    image: redis:7.4.3
     restart: always
     #command: ["redis-server", "--appendonly", "yes", "--maxmemory", "12000mb", "--maxmemory-policy", "volatile-lru"]
-    command: ["redis-server", "--appendonly", "yes", "--appendfsync", "always", "--maxmemory", "20000mb", "--maxmemory-policy", "allkeys-lru"]
+    #command: ["redis-server", "--appendonly", "yes", "--appendfsync", "always", "--maxmemory", "20000mb", "--maxmemory-policy", "allkeys-lru"]
     #command:
     #- bash
     #- -c
@@ -22,7 +22,7 @@ services:
     volumes:
       - redisdata:/data
   elasticsearch:
-    image: docker.elastic.co/elasticsearch/elasticsearch:8.17.4
+    image: docker.elastic.co/elasticsearch/elasticsearch:8.18.0
     volumes:
       - esdata:/usr/share/elasticsearch/data
     environment:
@@ -56,18 +56,21 @@ services:
       MINIO_ROOT_PASSWORD: ${MINIO_ROOT_PASSWORD}
     command: server /data
   rabbitmq:
-    image: rabbitmq:4.0-management
+    image: rabbitmq:4.1-management
     environment:
       - RABBITMQ_DEFAULT_USER=${RABBITMQ_DEFAULT_USER}
       - RABBITMQ_DEFAULT_PASS=${RABBITMQ_DEFAULT_PASS}
       - RABBITMQ_NODENAME=rabbit01@localhost
     volumes:
+      - type: bind
+        source: ./rabbitmq.conf
+        target: /etc/rabbitmq/rabbitmq.conf
       - amqpdata:/var/lib/rabbitmq
     ports:
       - "0.0.0.0:15672:15672"
     restart: always
   opencti:
-    image: opencti/platform:6.6.2
+    image: opencti/platform:6.6.8
     environment:
       - NODE_OPTIONS=--max-old-space-size=8096
       - APP__PORT=8080
@@ -109,7 +112,7 @@ services:
       - rabbitmq
     restart: always
   worker:
-    image: opencti/worker:6.6.2
+    image: opencti/worker:6.6.8
     environment:
       - OPENCTI_URL=http://opencti:8080
       - OPENCTI_TOKEN=${OPENCTI_ADMIN_TOKEN}
@@ -121,7 +124,7 @@ services:
       replicas: 3
     restart: always
   connector-export-report-pdf:
-    image: opencti/connector-export-report-pdf:6.6.2
+    image: opencti/connector-export-report-pdf:6.6.8
     environment:
       - OPENCTI_URL=http://opencti:8080
       - OPENCTI_TOKEN=${OPENCTI_ADMIN_TOKEN}
@@ -145,7 +148,7 @@ services:
     depends_on:
       - opencti
   connector-export-file-stix:
-    image: opencti/connector-export-file-stix:6.6.2
+    image: opencti/connector-export-file-stix:6.6.8
     environment:
       - OPENCTI_URL=http://opencti:8080
       - OPENCTI_TOKEN=${OPENCTI_ADMIN_TOKEN}
@@ -154,13 +157,12 @@ services:
       - CONNECTOR_NAME=ExportFileStix2
       - CONNECTOR_VALIDATE_BEFORE_IMPORT=true # Validate any bundle before import
       - CONNECTOR_SCOPE=application/json
-      - CONNECTOR_AUTO=true # Enable/disable auto-import of file
       - CONNECTOR_LOG_LEVEL=info
     restart: always
     depends_on:
       - opencti
   connector-export-file-csv:
-    image: opencti/connector-export-file-csv:6.6.2
+    image: opencti/connector-export-file-csv:6.6.8
     environment:
       - OPENCTI_URL=http://opencti:8080
       - OPENCTI_TOKEN=${OPENCTI_ADMIN_TOKEN}
@@ -173,7 +175,7 @@ services:
     depends_on:
       - opencti
   connector-export-file-txt:
-    image: opencti/connector-export-file-txt:6.6.2
+    image: opencti/connector-export-file-txt:6.6.8
     environment:
       - OPENCTI_URL=http://opencti:8080
       - OPENCTI_TOKEN=${OPENCTI_ADMIN_TOKEN}
@@ -186,7 +188,7 @@ services:
     depends_on:
       - opencti
   connector-import-file-stix:
-    image: opencti/connector-import-file-stix:6.6.2
+    image: opencti/connector-import-file-stix:6.6.8
     environment:
       - OPENCTI_URL=http://opencti:8080
       - OPENCTI_TOKEN=${OPENCTI_ADMIN_TOKEN}
@@ -201,7 +203,7 @@ services:
     depends_on:
       - opencti
   connector-import-document:
-    image: opencti/connector-import-document:6.6.2
+    image: opencti/connector-import-document:6.6.8
     environment:
       - OPENCTI_URL=http://opencti:8080
       - OPENCTI_TOKEN=${OPENCTI_ADMIN_TOKEN}
@@ -219,7 +221,7 @@ services:
     depends_on:
       - opencti
   connector-analysis:
-    image: opencti/connector-import-document:6.6.2
+    image: opencti/connector-import-document:6.6.8
     environment:
       - OPENCTI_URL=http://opencti:8080
       - OPENCTI_TOKEN=${OPENCTI_ADMIN_TOKEN}
@@ -236,7 +238,7 @@ services:
     depends_on:
       - opencti
   connector-opencti:
-    image: opencti/connector-opencti:6.6.2
+    image: opencti/connector-opencti:6.6.8
     environment:
       - OPENCTI_URL=http://opencti:8080
       - OPENCTI_TOKEN=${OPENCTI_ADMIN_TOKEN}
@@ -256,7 +258,7 @@ services:
     depends_on:
       - opencti
   connector-alienvault:
-    image: opencti/connector-alienvault:6.6.2
+    image: opencti/connector-alienvault:6.6.8
     environment:
       - OPENCTI_URL=http://opencti:8080
       - OPENCTI_TOKEN=${OPENCTI_ADMIN_TOKEN}
@@ -293,7 +295,7 @@ services:
     depends_on:
       - opencti
 #  connector-cisa-known-exploited-vulnerabilities:
-#    image: opencti/connector-cisa-known-exploited-vulnerabilities:6.6.2
+#    image: opencti/connector-cisa-known-exploited-vulnerabilities:6.6.8
 #    environment:
 #      - OPENCTI_URL=http://opencti:8080
 #      - OPENCTI_TOKEN=${OPENCTI_ADMIN_TOKEN}
@@ -310,7 +312,7 @@ services:
 #    depends_on:
 #      - opencti
   connector-abuseipdb-ipblacklist:
-    image: opencti/connector-abuseipdb-ipblacklist:6.6.2
+    image: opencti/connector-abuseipdb-ipblacklist:6.6.8
     environment:
       - OPENCTI_URL=http://opencti:8080
       - OPENCTI_TOKEN=${OPENCTI_ADMIN_TOKEN}
@@ -327,7 +329,7 @@ services:
     depends_on:
       - opencti
   connector-vxvault:
-    image: opencti/connector-vxvault:6.6.2
+    image: opencti/connector-vxvault:6.6.8
     environment:
       - OPENCTI_URL=http://opencti:8080
       - OPENCTI_TOKEN=${OPENCTI_ADMIN_TOKEN}
@@ -343,7 +345,7 @@ services:
     depends_on:
       - opencti
   connector-shodan:
-    image: opencti/connector-shodan:6.6.2
+    image: opencti/connector-shodan:6.6.8
     environment:
       - OPENCTI_URL=http://opencti:8080
       - OPENCTI_TOKEN=${OPENCTI_ADMIN_TOKEN}
@@ -361,22 +363,8 @@ services:
     restart: always
     depends_on:
       - opencti
-  connector-abuse-ssl:
-    image: opencti/connector-abuse-ssl:6.6.2
-    environment:
-      - OPENCTI_URL=http://opencti:8080
-      - OPENCTI_TOKEN=${OPENCTI_ADMIN_TOKEN}
-      - CONNECTOR_ID=GENERATEUUID4HERE
-      - "CONNECTOR_NAME=Abuse.ch SSL Blacklist"
-      - CONNECTOR_SCOPE=abusessl
-      - CONNECTOR_LOG_LEVEL=error
-      - ABUSESSL_URL=https://sslbl.abuse.ch/blacklist/sslipblacklist.csv
-      - ABUSESSL_INTERVAL=360
-    restart: always
-    depends_on:
-      - opencti
   connector-ipinfo:
-    image: opencti/connector-ipinfo:6.6.2
+    image: opencti/connector-ipinfo:6.6.8
     environment:
       - OPENCTI_URL=http://opencti:8080
       - OPENCTI_TOKEN=${OPENCTI_ADMIN_TOKEN}
@@ -393,7 +381,7 @@ services:
     depends_on:
       - opencti
   connector-aptcampaign:
-    image: opencti/connector-cyber-campaign-collection:6.6.2
+    image: opencti/connector-cyber-campaign-collection:6.6.8
     environment:
       - OPENCTI_URL=http://opencti:8080
       - OPENCTI_TOKEN=${OPENCTI_ADMIN_TOKEN}
@@ -409,7 +397,7 @@ services:
     depends_on:
       - opencti
   connector-malware-bazaar-recent-additions:
-    image: opencti/connector-malwarebazaar-recent-additions:6.6.2
+    image: opencti/connector-malwarebazaar-recent-additions:6.6.8
     environment:
       - OPENCTI_URL=http://opencti:8080
       - OPENCTI_TOKEN=${OPENCTI_ADMIN_TOKEN}
@@ -426,7 +414,7 @@ services:
     depends_on:
       - opencti
   connector-mitre:
-    image: opencti/connector-mitre:6.6.2
+    image: opencti/connector-mitre:6.6.8
     environment:
       - OPENCTI_URL=http://opencti:8080
       - OPENCTI_TOKEN=${OPENCTI_ADMIN_TOKEN}
@@ -441,7 +429,7 @@ services:
     depends_on:
       - opencti
   connector-mitre-atlas:
-    image: opencti/connector-mitre-atlas:6.6.2
+    image: opencti/connector-mitre-atlas:6.6.8
     environment:
       - OPENCTI_URL=http://opencti:8080
       - OPENCTI_TOKEN=${OPENCTI_ADMIN_TOKEN}
@@ -457,7 +445,7 @@ services:
     depends_on:
       - opencti
   connector-dnstwist:
-    image: opencti/connector-dnstwist:6.6.2
+    image: opencti/connector-dnstwist:6.6.8
     environment:
       - CONNECTOR_NAME=DNS_TWISTER
       - CONNECTOR_SCOPE=Domain-Name
@@ -476,7 +464,7 @@ services:
     depends_on:
       - opencti
   connector-disarm-framework:
-    image: opencti/connector-disarm-framework:6.6.2
+    image: opencti/connector-disarm-framework:6.6.8
     environment:
       - OPENCTI_URL=http://opencti:8080
       - OPENCTI_TOKEN=${OPENCTI_ADMIN_TOKEN}
@@ -491,7 +479,7 @@ services:
     depends_on:
       - opencti
   connector-cve:
-    image: opencti/connector-cve:6.6.2
+    image: opencti/connector-cve:6.6.8
     environment:
       - OPENCTI_URL=http://opencti:8080
       - OPENCTI_TOKEN=${OPENCTI_ADMIN_TOKEN}
@@ -511,7 +499,7 @@ services:
     depends_on:
       - opencti
   connector-cpe:
-    image: opencti/connector-cpe:6.6.2
+    image: opencti/connector-cpe:6.6.8
     environment:
       - OPENCTI_URL=http://opencti:8080
       - OPENCTI_TOKEN=${OPENCTI_ADMIN_TOKEN}
@@ -527,7 +515,7 @@ services:
     depends_on:
       - opencti
 #  connector-urlhaus:
-#    image: opencti/connector-urlhaus:6.6.2
+#    image: opencti/connector-urlhaus:6.6.8
 #    environment:
 #      - OPENCTI_URL=http://opencti:8080
 #      - OPENCTI_TOKEN=${OPENCTI_ADMIN_TOKEN}
@@ -545,7 +533,7 @@ services:
 #    depends_on:
 #      - opencti
 #  connector-google-safebrowsing:
-#    image: opencti/connector-google-safebrowsing:6.6.2
+#    image: opencti/connector-google-safebrowsing:6.6.8
 #    environment:
 #      # Connector's definition parameters:
 #      - CONNECTOR_NAME=Google Safe Browsing
@@ -564,7 +552,7 @@ services:
 #    depends_on:
 #      - opencti
 #  connector-ipqs:
-#    image: opencti/connector-ipqs:6.6.2
+#    image: opencti/connector-ipqs:6.6.8
 #    environment:
 #      - OPENCTI_URL=http://opencti:8080
 #      - OPENCTI_TOKEN=${OPENCTI_ADMIN_TOKEN}
@@ -584,7 +572,7 @@ services:
 #    depends_on:
 #      - opencti
 #  connector-greynoise:
-#    image: opencti/connector-greynoise:6.6.2
+#    image: opencti/connector-greynoise:6.6.8
 #    environment:
 #      - OPENCTI_URL=http://opencti:8080
 #      - OPENCTI_TOKEN=${OPENCTI_ADMIN_TOKEN}
@@ -603,7 +591,7 @@ services:
 #    depends_on:
 #      - opencti
 #  connector-maltiverse:
-#    image: opencti/connector-maltiverse:6.6.2
+#    image: opencti/connector-maltiverse:6.6.8
 #    environment:
 #      - OPENCTI_URL=http://opencti:8080
 #      - OPENCTI_TOKEN=${OPENCTI_ADMIN_TOKEN}
