--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,6 @@
 services:
   redis:
-    image: redis:7.4.3
+    image: redis:8.0.3
     restart: always
     #command: ["redis-server", "--appendonly", "yes", "--maxmemory", "12000mb", "--maxmemory-policy", "volatile-lru"]
     #command: ["redis-server", "--appendonly", "yes", "--appendfsync", "always", "--maxmemory", "20000mb", "--maxmemory-policy", "allkeys-lru"]
@@ -22,7 +22,7 @@ services:
     volumes:
       - redisdata:/data
   elasticsearch:
-    image: docker.elastic.co/elasticsearch/elasticsearch:8.18.0
+    image: docker.elastic.co/elasticsearch/elasticsearch:8.18.3
     volumes:
       - esdata:/usr/share/elasticsearch/data
     environment:
@@ -46,7 +46,7 @@ services:
         soft: 65536
         hard: 65536
   minio:
-    image: minio/minio:RELEASE.2024-05-28T17-19-04Z
+    image: 
     volumes:
       - s3data:/data
     ports:
